Initial JSON format definition. Classes and custom deserializer