@@ -18,6 +18,7 @@
         <maven.assembly.plugin.version>2.1</maven.assembly.plugin.version>
         <junit.version>5.6.2</junit.version>
         <commons-lang3.version>3.9</commons-lang3.version>
+        <gson.version>2.8.6</gson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -39,6 +40,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
         </dependency>
+        <!--GSON-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -58,6 +65,7 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
